testdata/baselines/reference/submodule/compiler/parametersSyntaxErrorNoCrash2.errors.txt
parametersSyntaxErrorNoCrash2.ts(3,25): error TS2391: Function implementation is missing or not immediately following the declaration.
parametersSyntaxErrorNoCrash2.ts(3,43): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash2.ts(3,43): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash2.ts(3,44): error TS1005: ':' expected.
parametersSyntaxErrorNoCrash2.ts(3,51): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash2.ts(3,51): error TS2300: Duplicate identifier '(Missing)'.
parametersSyntaxErrorNoCrash2.ts(3,51): error TS1005: ':' expected.
parametersSyntaxErrorNoCrash2.ts(3,54): error TS1005: ')' expected.


==== parametersSyntaxErrorNoCrash2.ts (8 errors) ====
    // https://github.com/microsoft/TypeScript/issues/59353
    
    export default function getThing( { return 'thing'; }
                            ~~~~~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                                              
!!! error TS2300: Duplicate identifier '(Missing)'.
                                              
!!! error TS2300: Duplicate identifier '(Missing)'.
                                               ~~~~~~~
!!! error TS1005: ':' expected.
                                                      
!!! error TS2300: Duplicate identifier '(Missing)'.
                                                      
!!! error TS2300: Duplicate identifier '(Missing)'.
                                                      ~
!!! error TS1005: ':' expected.
                                                         
!!! error TS1005: ')' expected.